--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
+<head><link rel="stylesheet" href="style.css"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chill guy</title>
     <link rel="icon" type="image/jpg" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOrUHT0qqFRcCcVFyNAUk9GDwWRtyejm0LdZ7XN75HC2U9ZX0RxWk4ToL4XDfEW3M54ro&usqp=CAU">
@@ -23,10 +22,10 @@
                 <a href="#">Blog</a>
             </li>
             <li>
-                <a href="#">A propos</a>
+                <a href="A propos.html">A propos</a>
             </li>
-            <li>
-                <a href="#">contact</a>
+            <li class="contact">
+                <a href="contact.html">contact</a>
             </li>
         </ul>
     </div>
@@ -36,8 +35,13 @@
     <div class="bouton">
         <a href="#" class="btn">SHIELD</a>
         <a href="#" class="btn">BUILD</a>
-    </div>
-    </header>
     
+    </header>
+    </div>
+    <div class="box">
+        <span class="material-symbols-outlined">search</span>
+        <input type="search" placeholder="Search...">
+        <a href="#"></a>
+    </div>
 </body>
 </html>
